<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="4dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="4dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <TextView
        android:id="@+id/textViewConsumption1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/consumptionOne"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextConsumption1"
        app:layout_constraintEnd_toStartOf="@+id/editTextConsumption1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editTextConsumption1" />

    <EditText
        android:id="@+id/editTextConsumption1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint=""
        android:importantForAutofill="no"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/buttonConsumption1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        app:layout_constraintBottom_toBottomOf="@+id/editTextConsumption1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextConsumption1"
        app:layout_constraintTop_toTopOf="@+id/editTextConsumption1"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/textViewConsumption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/consumptionTwo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextConsumption"
        app:layout_constraintEnd_toStartOf="@+id/editTextConsumption"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextConsumption1"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextConsumption"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:importantForAutofill="no"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextConsumption1" />

    <Button
        android:id="@+id/buttonConsumption2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        app:layout_constraintBottom_toBottomOf="@+id/editTextConsumption"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextConsumption"
        app:layout_constraintTop_toTopOf="@+id/editTextConsumption"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvGasPrice1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/value_gas_one"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/etGasPrice1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewConsumption" />

    <EditText
        android:id="@+id/etGasPrice1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tvGasPrice1"
        app:layout_constraintTop_toBottomOf="@+id/editTextConsumption" />

    <TextView
        android:id="@+id/tvTextPrice2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/value_gas_two"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etGasPrice2"
        app:layout_constraintEnd_toStartOf="@+id/etGasPrice2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etGasPrice1"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/etGasPrice2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tvTextPrice2"
        app:layout_constraintTop_toBottomOf="@+id/etGasPrice1" />

    <!-- Section 3: Results -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/result"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etGasPrice2" />

    <EditText
        android:id="@+id/etResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

</androidx.constraintlayout.widget.ConstraintLayout>